  * Set seen false flag when ports configuration is failed.
  * Allow '*' for hostname in ports.conf.
  * Use /bin/echo instead of shell built-in echo.
  * Improve cupsys.templates.
  * Updated Russian, German, Czech debconf translation.
  * Removed example descriptions from init.d script.

  [ Martin Pitt ]
  * debian/patches/02_configure.dpatch: Adapt to r4885.

 -- Kenshi Muto <kmuto@debian.org>  Thu, 15 Dec 2005 07:15:54 +0900

cupsys (1.1.99.b1.r4876-1) unstable; urgency=low

  [ Martin Pitt ]
  * debian/local/{enable_browsing,browsing_status}: Adapt configuration file
    locations to new conf.d structure.
  * debian/cupsys.templates: Fix default value for cupsys/browse: 'yes' is an
    invalid bool option, change to true.
  * debian/cupsys.init.d: Use LSB init functions. Add lsb-base package
    dependency.
  * debian/cupsys.postinst: Wait a second between kill -9'ing cupsys and
    checking if the process still exists to avoid false positives and upgrade
    failures.
  * Clean up support for /etc/cups/conf.d:
    - Add debian/patches/08_cupsd.conf.conf.d.dpatch: Add include commands to
      default cupsd.conf file.
    - debian/cupsys.postinst: Remove fiddling with cupsd.conf.
    - This will ensure that cupsd.conf will remain an unchanged conffile.
  * debian/rules: Remove empty debian/patched on clean.
  * debian/patches/10_cupsd.conf2.dpatch: Re-enable listening to localhost to
    make the web interface work.
  * debian/patches/44_fixconfdirperms.dpatch:
    - Put configuration files into group root instead of nobody to avoid
      privilege escalation of nobody/nogroup and comply to Debian standards.
    - Use CUPS_DEFAULT_GROUP instead of 'nobody' as the default group for
      setgid'ing to and conffiles which must be writable for cupsd.
    - Disable changing permissions of cupsd.conf conffile.
  * Add debian/patches/09_runasuser_fixes.dpatch:
    - scheduler/main.c: Generate a certificate even when running as user, just